# edu-emurgo-haskellAnimation

./: .editorconfig  .gitignore  README.md  animate.cabal  animate.nix  shell.nix
app/: Main.hs
src/: Animation.hs
src/Animate/: Animation.hs  Cli.hs  Logic.hs  Render.hs  Types.hs  Util.hs  Vector.hs
