cabal-version:      2.4
name:               animate
version:            0.1.0.0
synopsis:           A small Haskell cli animation for educational purposes
description:        Trivial Haskell animation project for educational purposes from the Emurgo Haskell Dev Pro batch 68
-- A URL where users can report bugs.
-- bug-reports:
license:            Unlicense
author:             DeCentN2Madness
maintainer:         7983+DeCentN2Madness@users.noreply.github.com
-- copyright:
category: Education
-- extra-source-files:

executable animation-cli
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        animate
    hs-source-dirs:   app
    default-language: Haskell2010

library
    build-depends:
        base ^>=4.15.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  Animate.Animation
                    , Animate.Cli
    other-modules:    Animate.Logic
                    , Animate.Render
                    , Animate.Types
                    , Animate.Util
                    , Animate.Vector
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
