cabal-version:      2.4
name:               animate
version:            0.1.0.0
synopsis:           A small Haskell cli animation for my own educational tinkering
description:        Trivial Haskell animation project for educational purposes from the Emurgo Haskell Dev Pro batch 68
bug-reports:        https://github.com/DeCentN2Madness/edu-emurgo-haskellAnimation/issues
license:            Unlicense
author:             DeCentN2Madness
maintainer:         7983+DeCentN2Madness@users.noreply.github.com
category: Education

executable animation-cli
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.1.0,
        animate,
        brick
    hs-source-dirs:   app
    default-language: Haskell2010

library
    build-depends:
        base ^>=4.15.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  Animate.Animation
                    , Animate.Cli
    other-modules:    Animate.Logic
                    , Animate.Render
                    , Animate.Types
                    , Animate.Util
                    , Animate.Vector
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
